# stock_performance_dashboard

./: .env  config.py  dashboard.py  pyproject.toml  rough.ipynb  snp_list.csv  stock_list.csv
markets/: asx200.py  canada.py  china_csi_300.py  france.py  ftse_100.py  germany.py  india.py  nikkei_225.py  us.py
pages/: _52w_high_scanner.py
stock_list/: ASX200.csv  CAC.csv  DAX.csv  FTSE_100.csv  TSX.csv  china_csi_300.csv  nikkei_225.csv  snp_list.csv  stock_list.csv
utils/: helpers_functions.py
